# paper-market

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  GLOSSARY.md  README.md  docker-compose.yml  pyproject.toml  spec.md
app/: api_member.py  api_public.py  api_teller.py  clock.py  config.py  db.py  errors.py  events.py  locks.py  main.py  money.py  repo.py  services.py  ticker.py
app/api/: deps.py  member.py  public.py  teller.py
app/bank/: interest.py  repo.py  service.py
app/core/: auth.py  clock.py  config.py  cooldown.py  db.py  errors.py  money.py  networth.py  provision.py  realtime.py
app/domain/: export_csv.py  interest.py  networth.py  price_engine.py
app/stock/: engine.py  events.py  repo.py  service.py  ticker.py
config/: config.toml
deploy/: nginx.conf.example
docs/: deploy.md  event.md  price_model.md  stock.md
frontend/: dashboard.html  member.html  screen.html  teller.html
frontend/css/: app.css  components.css  dashboard.css  member.css  teller.css  tokens.css
frontend/js/: common.js  dashboard.js  member.js  teller.js
scripts/: gen_pins.py  setup_db.py
tests/: conftest.py  test_api_auth.py  test_api_fd.py  test_api_member.py  test_api_teller.py  test_app_boot.py  test_base_path.py  test_clock.py  test_cooldown.py  test_events.py  test_export_csv.py  test_interest.py  test_loan_owed_display.py  test_networth.py  test_price_engine.py  test_seed.py  test_services_accounts.py  test_services_fd.py  test_services_loans.py  test_services_market.py  test_setup_db.py  test_static_pages.py
